# QuiltiX

./: .gitignore  MANIFEST.in  NOTICE  README.md  THIRD-PARTY.md  pyproject.toml
.github/workflows/: pypi_publish.yml
examples/: create_standard_surface.py  load_amd_copper_mtlx.py  load_standard_surface_mtlx.py
sample_plugins/materialjson/: plugin.py
sample_plugins/materialxjson/: plugin.py
src/QuiltiX/: __main__.py  constants.py  mx_node.py  quiltix.py  quiltix_hython.py  qx_node.py  qx_node_property.py  qx_node_property_widgets.py  qx_nodegraph.py  qx_nodegraph_tabsearch.py  qx_nodegraph_viewer.py  qx_plugin.py  qx_port.py  qx_subnodegraph.py  style.qss  usd_render_settings.py  usd_stage.py  usd_stage_tree.py  usd_stage_view.py
src/QuiltiX/hotkeys/: hotkey_functions.py  hotkeys.json
src/QuiltiX/resources/: standard_surface.mtlx
src/QuiltiX/resources/hdris/: boiler_room_1k.exr  cayley_interior_1k.exr  dreifaltigkeitsberg_1k.hdr
src/QuiltiX/resources/materials/: standard_surface.mtlx
src/QuiltiX/resources/materials/Black_Upholstery_1k_8b/: Black_Upholstery.mtlx
src/QuiltiX/resources/materials/Circle_Marble_Pattern_1k_8b/: Circle_Marble_Pattern.mtlx
src/QuiltiX/resources/materials/Copper_Old_1k_8b/: Copper_Old.mtlx
src/QuiltiX/resources/materials/Mahogany_Chevron_Flooring_1k_8b/: Mahogany_Chevron_Flooring.mtlx
src/QuiltiX/resources/materials/Motley_Patchwork_Rug_1k_8b/: Motley_Patchwork_Rug.mtlx
src/QuiltiX/resources/materials/Skin_5_percent_melanin_1k_8b/: Skin_5_percent_melanin.mtlx
src/QuiltiX/resources/materials/Tiles_Black_Long_Variative_1k_8b/: Tiles_Black_Long_Variative.mtlx
tests/: conftest.py  helpers.py  test_mtlx_loading.py  test_node_creation.py  test_plugins.py
tests/examples/: README.md  create_all_available_nodes.py  create_standard_surface.py  load_amd_copper_mtlx.py  load_amd_wooden_flooring_mtlx.py  load_simple_mtlx.py  load_standard_surface_mtlx.py
