[project]
name = "QuiltiX"
version = "0.4.1"
description = "MaterialX Graphical Node Editor"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "~=3.9"
keywords = ["openusd", "materialx"]

authors = [
    {name = "Manuel Köster", email = "manuelkoestercg@gmail.com" },
    {name = "Richard Frangenberg", email = "richard@prism-pipeline.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Topic :: Multimedia :: Graphics :: Editors",
]

dependencies = [
    "Qt.py",
    "PySide2>=5.12",
    "PyOpenGL",
    "PyOpenGL_accelerate",
    # TODO
    "NodeGraphQt-QuiltiX-fork",
    # "NodeGraphQt @ git+https://github.com/manuelkoester/NodeGraphQt.git@develop",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-qt",
    "pytest-cov",
    # TODO
    # "Qt.py-stubs @ git+https://github.com/matiascodesal/Qt.py-stubs.git@5a07e53",
    # "MaterialX-stubs @ git+https://github.com/manuelkoester/MaterialX-stubs.git@7696cbb"
]

# TODO
# usd = [
# ]

# TODO
# materialx = [
# ]


[project.urls]
"Homepage" = "https://github.com/PrismPipeline/QuiltiX"
"Bug Reports" = "https://github.com/PrismPipeline/QuiltiX/issues"
"Source" = "https://github.com/PrismPipeline/QuiltiX"

[project.gui-scripts]
quiltix = "QuiltiX:quiltix"

[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=QuiltiX"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
